alignment fix for mobile view, added cities

--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -1,6 +1,7 @@
 @media only screen and (max-width: 600px) {
   .tabClass {
     width: 90%;
+    float: center;
   }
 }
 
